# I3CBlaster

./: .gitignore  LICENSE  README.md  _config.yml
hw/LevelTranslatorForXiaoRp2040/: LevelTranslatorXiaoRp2040.kicad_pcb  LevelTranslatorXiaoRp2040.kicad_prl  LevelTranslatorXiaoRp2040.kicad_pro  LevelTranslatorXiaoRp2040.kicad_sch  Library.kicad_sym
hw/LevelTranslatorForXiaoRp2040/Library.pretty/: MOUDLE14P-SMD-2.54-21X17.8MM.kicad_mod  SOP50P310X90-8N.kicad_mod
pictures/: Example_trace_from_demo_runme_pythonscript.sal  Thumbs.db
python/: i3cblaster.py  i3cblaster_demo_runme.py
src/: CMakeLists.txt  XiaoNeoPixel.c  XiaoNeoPixel.h  i3c.pio  i3c_hl.c  i3c_hl.h  main.c  ucli.c  ucli.h  ucli_config.h  ucli_helpers.h  ucli_priv.h
src/python/: i3cblaster.py
